[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/m5x7.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/UI.gd" type="Script" id=2]
[ext_resource path="res://Audio/Audio.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 128
outline_size = 2
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 80
outline_size = 2
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.219608, 0.223529, 0.219608, 0.819608 )

[sub_resource type="DynamicFont" id=5]
size = 128
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 80
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 64
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pointer" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -5.0
margin_top = -5.0
margin_right = 5.0
margin_bottom = 5.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PointerText" type="RichTextLabel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -980.0
margin_top = 60.0
margin_right = 980.0
margin_bottom = 159.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Test[/center]"
text = "Test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Money" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -2040.0
margin_bottom = 300.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Entries" type="VBoxContainer" parent="Money"]
margin_left = 20.0
margin_top = 20.0
margin_right = 2020.0
margin_bottom = 280.0

[node name="Total" type="RichTextLabel" parent="Money/Entries"]
margin_right = 2000.0
margin_bottom = 128.0
grow_horizontal = 0
rect_min_size = Vector2( 2000, 128 )
rect_clip_content = false
mouse_filter = 2
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[right]Money: $10000[/right]"
text = "Money: $10000"

[node name="Entry" type="RichTextLabel" parent="Money/Entries"]
visible = false
margin_top = 132.0
margin_right = 2000.0
margin_bottom = 260.0
grow_horizontal = 0
rect_min_size = Vector2( 2000, 128 )
rect_clip_content = false
mouse_filter = 2
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 1, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[right]Rent: -$200[/right]"
text = "Rent: -$200"

[node name="HelperMessages" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1920.0
margin_top = -1080.0
margin_right = -1420.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 500, 1080 )
mouse_filter = 2
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverModal" type="PanelContainer" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="GameOverModal"]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverModal/CenterContainer"]
margin_left = 460.0
margin_top = 280.0
margin_right = 1460.0
margin_bottom = 800.0

[node name="GameOver" type="RichTextLabel" parent="GameOverModal/CenterContainer/VBoxContainer"]
margin_right = 1000.0
margin_bottom = 256.0
rect_min_size = Vector2( 1000, 256 )
custom_fonts/normal_font = SubResource( 5 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]Game Over[/center]"
text = "Game Over"

[node name="Retry" type="RichTextLabel" parent="GameOverModal/CenterContainer/VBoxContainer"]
margin_top = 260.0
margin_right = 1000.0
margin_bottom = 388.0
rect_min_size = Vector2( 1000, 128 )
custom_fonts/normal_font = SubResource( 6 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]Retry?[/center]"
text = "Retry?"

[node name="Exit" type="RichTextLabel" parent="GameOverModal/CenterContainer/VBoxContainer"]
margin_top = 392.0
margin_right = 1000.0
margin_bottom = 520.0
rect_min_size = Vector2( 1000, 128 )
custom_fonts/normal_font = SubResource( 7 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]Exit[/center]"
text = "Exit"

[node name="Audio" parent="." instance=ExtResource( 3 )]
mouse_filter = 2
[connection signal="gui_input" from="GameOverModal/CenterContainer/VBoxContainer/Retry" to="." method="_on_Retry_gui_input"]
[connection signal="mouse_entered" from="GameOverModal/CenterContainer/VBoxContainer/Retry" to="." method="_on_Retry_mouse_entered"]
[connection signal="mouse_exited" from="GameOverModal/CenterContainer/VBoxContainer/Retry" to="." method="_on_Retry_mouse_exited"]
[connection signal="gui_input" from="GameOverModal/CenterContainer/VBoxContainer/Exit" to="." method="_on_Exit_gui_input"]
[connection signal="mouse_entered" from="GameOverModal/CenterContainer/VBoxContainer/Exit" to="." method="_on_Exit_mouse_entered"]
[connection signal="mouse_exited" from="GameOverModal/CenterContainer/VBoxContainer/Exit" to="." method="_on_Exit_mouse_exited"]
